css/citylink-rl.scss
@font-face {
    font-family: 'HelveticaRoundedLTStdBdCn';
    src: url('http://www.city-link.co.uk/fonts/helveticaroundedltstd-bdcn-webfont.eot');
    src: url('http://www.city-link.co.uk/fonts/helveticaroundedltstd-bdcn-webfont.eot?#iefix') format('embedded-opentype'),
         url('http://www.city-link.co.uk/fonts/helveticaroundedltstd-bdcn-webfont.woff') format('woff'),
         url('http://www.city-link.co.uk/fonts/helveticaroundedltstd-bdcn-webfont.ttf') format('truetype'),
         url('http://www.city-link.co.uk/fonts/helveticaroundedltstd-bdcn-webfont.svg#HelveticaRoundedLTStdBdCn') format('svg');
    font-weight: normal;
    font-style: normal;
}

// variables

$green: #005f36;
$yellow: #ffd800;
$white: #fff;
$black: #000;
$font-stack: "HelveticaRoundedLTStdBdCn", "Trebuchet MS", Helvetica, sans-serif;

// general reset

body {
	font-family: $font-stack;
  overflow-x: hidden;
}
img {
  width: 100%;
  height: auto;
}
ul {
  -webkit-padding-start: 0;
  -moz-padding-start: 0;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font: $font-stack;
  color: $green;
}
a {
  color: #000;
  text-decoration: none;
}
a:hover {
  color: $yellow;
}
p {
  line-height: 200%;
}
// Navigation
.navbar-brand {
  height: 90px;
}
.navbar-collapse {
  background-color: $yellow;
  padding: 30px;
  color: $green;
}
.nav>li>a:hover, .nav>li>a:focus {
  background-color: $green;
}
.btn-y {
  background-color: $yellow;
  border: 1px solid $yellow;
  padding: 8px 15px;
  color: $green;
}
btn-y:hover {
  background-color: $green;
  color: $yellow;
}

// Home

.jumbotron h1 {
  color: $green;
}
.jumbotron p {
  font-size: 18px;
}
.jumbotron {
  background-color: $white;
}
.callout-green {
  margin-top: 40px;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: $green;
}
.callout-green p, .callout-green h3 {
  color: $white;
}
.callout-green p {
  padding-bottom: 20px;
}
.callout-green h1 {
  color: $yellow;
  padding-bottom: 10px;
}
.callout-yellow {
  margin-top: 40px;
  padding-top: 20px;
  background-color: $yellow;
}
.callout-yellow p, .callout-yellow h3 {
  color: $black;
}
.callout-yellow h1 {
  color: $green;
}
.readmore {
  vertical-align: baseline;
}

// footer

.social-widgets {
  padding-top: 40px;
  -moz-padding-start: 0;
}
.social-widgets li {
  display: inline;
}
.social-widgets li a img {
  max-width: 20px;
}
.social-widgets li a:hover img {
  opacity: 0.3;
}
.social-widgets li a h4 {
  display: inline-block;
  margin-bottom: 0;
}
.phonenum h4 {
  display: inline;
}
.back-btn {
  color: $green;
  background-color: #b7cdbd;
  margin-bottom: 40px;
}
// MQs
@media screen and (max-width:786px) {
  .more-tab {
    padding: 10px 0 0;
  }
  .jumbotron {
    padding: 0;
  }
}
@media (min-width:760px) and (max-width:989px) {
  .calloutbox {
    height: 210px;
  }
}
@media screen and (min-width:768px) {
  .callout-green {
  background: $green url('../img/callout-green.png') no-repeat center center;
  }
  .navbar-nav {
    float: right;
    margin-top: 40px;
  }
  .navbar-nav>li>a {
    padding: 15px 5px;
  }
  .nav>li>a:hover, .nav>li>a:focus {
    background-color: $white;
  }
  .navbar-collapse {
    background-color: $white;
  }
  .back-btn {
    margin-top: 100px;
  }
}

